# TrigDx

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: linting.yml  test.yml
benchmarks/: CMakeLists.txt  benchmark_gpu.cpp  benchmark_lookup.cpp  benchmark_lookup_avx.cpp  benchmark_lookup_xsimd.cpp  benchmark_mkl.cpp  benchmark_reference.cpp  benchmark_utils.hpp
cmake/: FindAVX.cmake  trigdx_config.hpp.in
include/trigdx/: gpu.hpp  interface.hpp  lookup.hpp  lookup.tpp  lookup_avx.hpp  lookup_constexpr.hpp  lookup_xsimd.hpp  mkl.hpp  reference.hpp  trigdx.hpp
python/: CMakeLists.txt  __init__.py  bindings.cpp
src/: CMakeLists.txt  gpu.cpp  lookup.cpp  lookup_avx.cpp  lookup_xsimd.cpp  mkl.cpp  reference.cpp
src/gpu/: gpu.cu  gpu.cuh
tests/: CMakeLists.txt  test_gpu.cpp  test_lookup.cpp  test_lookup_avx.cpp  test_lookup_xsimd.cpp  test_mkl.cpp  test_utils.hpp
